# echo

./: .gitignore  SETUP.md  package.json  pnpm-lock.yaml
public/: overlay.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: audio.rs  lib.rs  paste.rs  silence.rs  whisper.rs
