[package]
name = "echo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "echo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
cpal = "0.15"
hound = "3.5"
enigo = "0.2"
tokio = { version = "1", features = ["full"] }
once_cell = "1.20"
num-traits = "0.2"
reqwest = { version = "0.12", features = ["json", "multipart"] }
which = "7.0"
arboard = "3"
rdev = "0.5"
tauri-plugin-store = "2"
chrono = { version = "0.4", features = ["serde"] }


